--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -27,7 +27,7 @@ library(plyr)
 ```
 
 Read in the dataset:
-```{r}
+```{r results='hide'}
 unzip('activity.zip', "activity.csv")
 amd = read.csv("activity.csv", as.is=TRUE)
 amd = transform(amd, date=as.Date(date))
@@ -36,17 +36,18 @@ if (file.exists("activity.csv")) file.remove("activity.csv")
 
 
 ## What is the mean total number of steps taken per day?
+
 ```{r}
-ats = ddply(amd[complete.cases(amd),], .(date), summarize, 
-            daily_steps=sum(steps))
+ats = ddply(amd[complete.cases(amd),], .(date), summarize, daily_steps=sum(steps))
 ```
 
 Histogram of the total number of steps taken each day:
+
 ```{r fig.height=3, fig.cap=fn("Total number of steps taken each day")}
 ggplot(ats, aes(x=daily_steps)) + 
     geom_histogram(binwidth=2000, colour="white", alpha=0.8) +
     geom_vline(xintercept=median(ats$daily_steps)) + 
-    geom_vline(xintercept=mean(ats$daily_steps)*.995, color="red") + # to avoid overplotting
+    geom_vline(xintercept=mean(ats$daily_steps)*.995, color="red", alpha=.8) + # avoid overplotting
     xlab("daily steps")
 ```
 
@@ -58,6 +59,7 @@ The mean and median total number of steps taken per day are
 
 Time series plot of the 5-minute interval (x-axis) and
 the average number of steps taken, averaged across all days (y-axis)
+
 ```{r fig.height=3, fig.cap=fn("Daily activity pattern")}
 ai = ddply(amd, .(interval), summarize, imean = mean(steps, na.rm=TRUE))
 imax = ai[which.max(ai$imean), 1]; amax = max(ai$imean)
@@ -65,24 +67,20 @@ ggplot(ai, aes(x=interval, y=imean)) +
     geom_area(color=NA, fill="lightblue") + 
     geom_line() + 
     ylab("Mean # of steps per 5-min. int.") + 
-    geom_vline(xintercept=imax, color="red", ylim=c(0, amax)) +
+    geom_vline(xintercept=imax, color="red", ylim=c(0, amax), alpha=0.8) +
     scale_x_continuous(breaks=sort(c(seq(0, max(ai$interval), by=500), imax)))
 ```
 
 The average number of steps across all the days in the dataset, 
-is maximum for the following 5-minute interval:
-```{r}
-ai[which.max(ai$imean), 1]
-```
+is maximum for the 5-minute interval no. `r ai[which.max(ai$imean), 1]`.
+
 
 ## Imputing missing values
-The total number of missing values in the dataset:
-```{r}
-sum(complete.cases(amd))
-```
+There are `r sum(complete.cases(amd))` missing values in the dataset.
 
 The missing values are imputed using the median across all 5-minute intervals
-of the same denomination
+of the same denomination.
+
 ```{r}
 amdi = ddply(amd, .(interval), transform, 
              isteps=ifelse(is.na(steps), median(steps, na.rm=TRUE), steps))
@@ -91,38 +89,35 @@ atsi = ddply(amdi, .(date), summarize, daily_steps=sum(isteps))
 ```
 
 Histogram of the total number of steps taken each day:
+
 ```{r fig.height=3, fig.cap=fn("Total number of steps taken each day (imputed data)")}
 mdn2 = median(atsi$daily_steps); avg2 = mean(atsi$daily_steps)
 ggplot(atsi, aes(x=daily_steps)) + 
     geom_histogram(binwidth=2000, colour="white", alpha=0.8) + 
     geom_vline(xintercept=mdn2) + 
-    geom_vline(xintercept=avg2, colour="red") +
-    geom_text(x=avg2, y=10, label="mean", colour="red", angle=90, size=3.5, vjust=-.5) + 
+    geom_vline(xintercept=avg2, colour="red", alpha=0.8) +
+    annotate("text", x=avg2, y=9, label="mean", colour="red", size=3, angle=90, vjust=-.5, alpha=.8) + 
     scale_x_continuous(breaks=sort(c(seq(0, max(atsi$daily_steps), length.out=6), mdn2, avg2))) + 
-    theme(axis.text.x = element_text(angle=30, hjust=1, vjust=1)) + 
+    theme(axis.text.x = element_text(angle=35, hjust=1, vjust=1)) + 
     xlab("daily steps")
 ```
 
 Both the mean (`r sprintf("%.1f", avg2)`) and median (`r sprintf("%.1f", mdn2)`) total number of steps taken per day are lower for the imputed dataset and wider apart.
 
 
-
 ## Are there differences in activity patterns between weekdays and weekends?
 
 Add a new factor variable to the imputed dataset. It has two levels - "weekday" 
 and "weekend", indicating wether a given date is a weekday or weekend day.
-```{r}
-amdi$weekday = factor(ifelse(weekdays(amdi$date) %in% c("Saturday", "Sunday"), 
-                      "weekday", "weekend"))
-```
 
 ```{r}
+amdi$weekday = factor(ifelse(weekdays(amdi$date) %in% c("Saturday", "Sunday"), "weekday", "weekend"))
 aii = ddply(amdi, .(interval, weekday), summarize, imean = mean(isteps))
 ``` 
 
 Panel plot containing a time series plot of the 5-minute interval (x-axis) and 
-the average number of steps taken, averaged across all weekdays or 
-weekend days (y-axis)
+the average number of steps taken, averaged across all weekdays or weekend days (y-axis)
+
 ```{r  fig.cap=fn("Daily activity pattern by daytype")}
 ggplot(aii, aes(x=interval, y=imean)) + 
     facet_wrap(~weekday, nrow=2) + 
